# eisenhour-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pre-commit-config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.yml  refactor.md
.github/workflows/: ci-test.yml  main-push-full-test.yml  pr-changed-tests.yml
docker/: compose.yml
docker/test/: Dockerfile  compose.e2e.yml  compose.integration.yml  compose.unit.yml
docs/source/: conf.py  index.rst
docs/source/design/: aggregates.rst  bounded_context.rst  domain_events.rst  ubiquitos_language.rst
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/design/: index.rst
docs/sphinx/source/design/domain/: aggregate-root.rst  bounded-context.rst  domain-events.rst  domain-model.rst  domain-understanding.rst  service-contracts.rst  ubiquitous-language.rst
src/: main.py
src/application/messaging/command/base/: command.py  exceptions.py  (+1 more)
src/application/ports/jwt_provider/: jwt_provider.py
src/application/ports/repository/: exceptions.py  repository.py
src/domain/auth/auth_info/: auth_info.py  exceptions.py  local_auth_info.py  value_objects.py
src/domain/base/: aggregate.py  entity.py  exceptions.py  value_object.py
src/domain/user/: exceptions.py  user.py  value_objects.py
src/domain/user/repository/: exceptions.py  user_repository.py
src/eisenhour_api/: main.py
src/eisenhour_api/domain/factories/: user_factory.py
src/eisenhour_api/domain/repositories/: user_repository.py
src/eisenhour_api/domain/services/: user_service.py
src/eisenhour_api/infra/fastapi/: app.py
src/eisenhour_api/scripts/: docs.py
src/infra/hasher/: bcypt_hasher.py
src/infra/persistence/base/: mapper.py
src/infra/security/jwt_provider/: py_jwt_provider.py
src/shared_kernel/hasher/: hasher.py
src/shared_kernel/time/: time_provider.py
tests/e2e/: test_dummy_e2e.py
tests/integration/: conftest.py
tests/unit/: conftest.py  fakes.py
tests/unit/domain/: conftest.py
tests/unit/domain/base/: test_entity.py  test_value_object.py
tests/unit/domain/repositories/: test_user_repository.py
tests/unit/domain/services/: test_user_service.py
tests/unit/domain/user/: test_user_entity.py  test_value_objects.py
(+61 files in other folders)
