[project]
name = "eisenhour-api"
version = "0.1.0"
description = ""
authors = [{ name = "zeyakim-dev", email = "zeyakimdev@gmail.com" }]
readme = "README.md"
requires-python = "3.12.9"
dependencies = ["fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)"]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-rtd-theme = "^3.0.2"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
main = "src.eisenhour_api.main:main"
