[project]
name = "eisenhour-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "uvicorn>=0.34.2",
]


[tool.uv]
package = true


[tool.ruff.lint]
extend-select = ["UP", "I", "N", "RUF", "TRY"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py"
]
testpaths = ["tests"]
